--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -220,7 +220,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
-                            android:id="@+id/textView15"
+                            android:id="@+id/plusBtn"
                             android:layout_width="28dp"
                             android:layout_height="28dp"
                             android:background="@drawable/oval_bg"
